css/style.css
/* ... */
#typography-aquire {
  font-family: "Zen Maru Gothic", serif;
  font-weight: 300;
}

/*********************** General Project Page **********************/

picture {
  display: block;
  width: fit-content;
  margin: auto;
}

[class*="mockup-wrapper"] {
  display: flex;
  flex-wrap: wrap;
  margin-bottom: 60px;
  align-items: center;
  justify-content: center;
}

[class*="mockup-wrapper"] picture {
  margin: 10px;
  filter: drop-shadow(2px 2px 2px #5a3c2162) drop-shadow(12px 12px 10px #5a3c2192);
}

#jump-menu {
  width: 100%;
  padding: 5px 20px;
  padding-right: 40px;
  background: #fff8f0;
  left: 0;
  box-shadow: 0 2px 5px #131e20;
  font-size: 80%;
  height: 35px;
  transition: 300ms ease;
  overflow: hidden;
}

#jump-menu li:not(:first-child) {
  display: inline;
  width: 0;
  height: 0;
  opacity: 0;
  transition: 200ms ease;
  overflow: hidden;
}

#jump-menu ul {
  list-style: none;
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
  align-items: center;
  margin: 0;
}

#jump-menu li {
  display: inline-block;
  margin-right: 10px;
}

#jump-menu .button {
  padding: 4px 10px 2px;
  min-width: 60px;
  text-align: center;
  margin: 0 0 5px;
}

#jump-menu .button.toggle {
  transform: rotate(45deg);
  transition: 200ms ease;
}

#jump-menu.open {
  min-height: fit-content;
}

#jump-menu.open li:not(:first-child) { 
  display: inline-block;
  width: auto;
  height: auto;
  opacity: 1;
  overflow: auto;
}

#jump-menu.open .button.toggle {
  transform: rotate(0deg);
}

/********************** Contact Page *********************/

#contact iframe {
  width: 100%;
  min-height: 1450px;
  filter: drop-shadow(0 0 5px #fff8f1);
  background: linear-gradient(0deg, #eff0e9, transparent 300px);
  animation: 00ms fade-in;
}

.contact-wrap {
  text-align: center;
  background: url(../img/floral-green.jpg);
  background-size: 450px;
  padding: 10px 0;
  border-radius: 10px;
  margin: auto;
  width: fit-content;
  width: 100%;
  border: 1px solid #98b29b;
}

/********************************************* Media Queries ********************************************/

/* Medium devices (640px and larger) */
@media only screen and (min-width: 640px) {

  #hero h1 {
    font-size: 2.8em;
  }  

  .navtoggle {
      display: flex;
      align-items: center;
      justify-content: space-between;
      transition: height 200ms 200ms ease, width 200ms ease;
      width: 100%;
      overflow: hidden;
      position: relative;
      right: 0;
  }

  .navtoggle.absolute {
    position: absolute;
  }

  .navtoggle.scrolled {
    height: 55px;
    width: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    border-radius: 0 0 0 14px;
  }

  .navtoggle. .icon-row, .navtoggle ul {
    transition: 200ms ease;
  }

  .navtoggle.scrolled .icon-row, .navtoggle.scrolled ul {
    opacity: 0;
    height: 0;
    width: 0;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

  .navtoggle .icon-row, .navtoggle ul {
    transition: 500ms opacity ease;
  }

  .navtoggle.scrolled:after {
    content: '+menu';
    color: white;
    flex-grow: 1;
  }

  #jump-menu {
    height: auto;
    max-height: 20vh;
    transition: max-height 400ms ease, padding 300ms ease;
  }

  #jump-menu.minimized {
    max-height: 0;
    padding: 0;
    transition: none;
  }

  #jump-menu .button {
    margin: 5px 0;
  }

  #jump-menu li:not(:first-child) {
    display: inline-block;
    width: auto;
    height: auto;
    opacity: 1;
    overflow: auto;
  }

  #jump-menu .button.toggle {
    display: none;
  }

  nav > ul > li > a {
    font-size: 1.8em;
  }

  h2 {
    margin: 10px 0 10px;
  }

  #navigation {
    text-align: unset;
  }

  nav > ul > li {
    text-align: center;
  }

  #hero p {
    line-height: 1.6;
  }

  .row {
    margin: 0;
  }

  .icon-row {
    display: inline-flex;
    justify-content: center;
  }

  #home .button {
    padding: 10px 20px 8px;
  }

  nav > ul {
    margin: 10px 0;
  }

  .navtoggle li:not(:last-child) {
    display: inline-block;
  }

  .navtoggle li:last-child {
    display: none;
  }

  main {
    padding-top: 90px;
    overflow: hidden;
  }

  #hero div {
    width: 70%;
    max-width: 800px;
    margin: 0 auto;
  }

  body.project-page main {
    padding-top: 140px;
  }

  .col-md-6 {
    width: 50%;
  }

  .skills-and-tools .col-md-6 {
    margin: 0 0 20px;
    padding-top: 0;
  }

  [class*="col-md"] {
    float: left;
    padding: 10px;
  }

  .row:after {
    content: "";
    clear: both;
    display: table;
  }

  .project-container {
    padding: 40px 0;
  }

  div.project-container:first-of-type {
    padding-top: 20px;
  }

  .about picture {
    float: left;
    width: 50%;
    margin: 0 20px 0 0;
  }

}

/*Contact Form ( 800px or larger) */
@media only screen and (min-width: 800px) {
  .contact-wrap {
    max-width: 780px;
    width: auto;
    padding: 2vw;
  }

  #contact iframe {
    min-height: 1380px;
  }
}

/*Large devices (1024px or larger)*/
@media only screen and (min-width: 1024px) {

  #hero h1 {
    font-size: 3em;
  }
  
  .col-lg-3 {
    width: 25%;
  }

  .col-lg-4 {
    width: 33.33%;
  }

  .col-lg-5 {
    width: 41.66%;
  }

  .col-lg-7 {
    width: 58.33%;
  }

  .col-lg-8 {
    width: 66.66%;
  }

  .col-lg-9 {
    width: 75%;
  }

  [class*="col-lg"] {
    float: left;
    padding: 10px;
  }

  .skills-and-tools .col-md-6 {
    float: none;
    width: 100%;
  }

  .mockup-wrapper-tablet picture {
    max-width: 40%;
  }

  #High-Fidelity [class*="mockup-wrapper"] picture {
    max-width: 45%;
  }


}

/* X-large devices (1440px or larger)*/
@media only screen and (min-width: 1440px) {

}

